# easy-schedule

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  todo.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  error_handling.rs  macro_example.rs  now.rs  skip_example.rs  string_parsing.rs  string_skip_parsing.rs  task.rs  test_a.rs  thd.rs
src/: lib.rs  schdule.rs  task.rs
tests/: scheduler_tests.rs  skip_tests.rs  string_skip_parsing_test.rs  task_tests.rs
